admin/resources/css/spa-admin.css
/* ... */
#sfmaincontainer .sf-panel-body .sf-full-form .sf-panel-body-top-left {
    float: left;
    margin: 15px 0;
    color: #27476E;
}
#sfmaincontainer .sf-panel-body .sf-full-form .sf-title-block h4,
#sfmaincontainer .sf-panel-body .sf-full-form .sf-panel-body-top-left h4 {
    margin: 0;
    font-size: 16px;
    line-height: 22px;
    color: #006992;
}
#sfmaincontainer .sf-panel-body .sf-full-form .sf-title-block p,
#sfmaincontainer .sf-panel-body .sf-full-form .sf-title-block span,
#sfmaincontainer .sf-panel-body .sf-full-form .sf-panel-body-top-left p,
#sfmaincontainer .sf-panel-body .sf-full-form .sf-panel-body-top-left span {
    display: inline-block;
    margin: 10px 0 0 0;
    font-size: 12px;
    opacity: .75;
    color: #006992;
}
#sfmaincontainer .sf-panel-body .sf-full-form .sf-title-block p,
#sfmaincontainer .sf-panel-body .sf-full-form .sf-panel-body-top-left p {
    margin: 3px 0 0 0;
}
#sfmaincontainer .sf-panel-body .sf-full-form .sf-title-block.sf-title-block-v2 h4 {
    color: #27476E;
}
#sfmaincontainer .sf-panel-body .sf-full-form .sf-title-block.sf-title-block-v2 p,
#sfmaincontainer .sf-panel-body .sf-full-form .sf-title-block.sf-title-block-v2 span {
    color: #85A2BC;
    opacity: 1;
}
#sfmaincontainer .sf-panel-body .sf-full-form .sf-title-block.sf-title-block-v2 p {
    margin: 4px 0 0 0;
}
#sfmaincontainer .sf-panel-body .sf-full-form .sf-panel-body-top-right {
    float: right;
    margin: 5px -10px 0 0;
    padding: 0;
}
#sfmaincontainer .sf-panel-body .sf-full-form+.sf-form-submit-bar {
    /*margin: 30px 0 0 0;*/
}

#sfmaincontainer .sf-panel-body .sf-half-form {
    float: left;
    width: 50%;
    padding: 0 15px 0 0;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-panel-body-top {
    float: left;
    margin: -20px 0 20px -20px;
    padding: 20px;
    background-color: #EAF0F4;
    width: calc(100% + 40px);
    line-height: 20px;
    -khtml-border-radius: 4px 4px 0px 0px;
    -webkit-border-radius: 4px 4px 0px 0px;
    border-radius: 4px 4px 0px 0px;
    font-family: "Open Sans Semibold";
    font-size: 14px;
    color: #27476E;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-panel-body-top-left {
    float: left;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-panel-body-top-left h4 {
    margin: 0;
    font-size: 14px;
    line-height: 19px;
    color: #006992;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-panel-body-top-right {
    float: right;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-fieldset {
    position: relative;
    margin-bottom: 30px;
    padding: 20px;
    background-color: #FFF;
    -khtml-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
}
#sfmaincontainer .sf-panel-body .sf-half-form .sf-fieldset .sf-alert-block {
    margin: 0 0 20px 0;
}
#sfmaincontainer .sf-panel-body .sf-half-form+.sf-half-form {
    padding: 0 0 0 15px;
}
#sfmaincontainer .sf-panel-body .sf-half-form+.sf-form-submit-bar {
    margin: 0;
}
#sfmaincontainer .sf-upload {
    display: inline-block;
    position: relative;
    margin: 0;
}
#sfmaincontainer .sf-upload label {
    display: none;
}
#sfmaincontainer .sf-upload #sf-upload-button {
}
#sfmaincontainer .sf-upload #sf-upload-status {
    position: absolute;
    background: rgba(0, 185, 208, .7);
    padding: 0 10px;
    right: 0;
    color: white;
    top: 30px;
    -khtml-border-radius: 4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    z-index: 999;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk,
#sfmaincontainer .sf-fieldset .subsubsub {
    width: auto;
    margin: 17px 0 0 0;
    font-size: 14px;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk li,
#sfmaincontainer .sf-fieldset .subsubsub li {
    float: left;
    width: auto;
    margin-right: 20px;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk a,
#sfmaincontainer .sf-fieldset .subsubsub a {
    line-height: 19px;
    margin: 0;
    padding: 0;
    color: #9D9EA0;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk a.current,
#sfmaincontainer .sf-fieldset .subsubsub a.current {
    color: #257EA1;
}
#sfmaincontainer .sf-fieldset .subsubsub-desk a .count,
#sfmaincontainer .sf-fieldset .subsubsub-desk a.current .count,
#sfmaincontainer .sf-fieldset .subsubsub a .count,
#sfmaincontainer .sf-fieldset .subsubsub a.current .count {
    font-weight: inherit;
    color: inherit;
}

/*#sfmaincontainer .sf-fieldset .tablenav {
    display: none;
}*/


#sfmaincontainer .sf-fieldset .tablenav {
        height: auto;
}



#sfmaincontainer .sf-tablenav {
        display: grid;
        grid-column-gap: 20px;
        grid-template-columns : 1fr 1fr 1fr;
        margin-bottom: 20px;
}


#sfmaincontainer .sf-tablenav .sf-form-row-search {
        grid-column : 1 / span 2;
        margin-bottom: 0;
}


#sfmaincontainer .sf-tablenav .sf-pagination {
        grid-column : 1 / span 2;
        margin-bottom: 10px;
}

#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav {
        display: initial;
}


#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav .tablenav-pages {
        display: none;
}


#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav .actions.bulkactions select {
        width: auto;
        margin: 0;
}

#sfmaincontainer .sf-fieldset .sf-plugin-hide-users .tablenav .actions.bulkactions {
        margin: 13px 0;
}


#sfmaincontainer .sf-panel-body-top-right .sf-input-group,
#sfmaincontainer .sf-panel-body-top-right .search-box {
    float: left;
    width: 200px;
    margin: 5px 20px 5px 0;
}
#sfmaincontainer .sf-panel-body-top-right .sf-input-group {
    width: 250px;
}
#sfmaincontainer .sf-panel-body-top-right .sf-input-group.sf-input-small {
    width: 220px;
}
#sfmaincontainer .sf-panel-body-top-right .search-box input[type="search"] {
    height: 40px;
    margin: 0;
    -khtml-border-radius: 20px;
    -webkit-border-radius: 20px;
    border-radius: 20px;
}
#sfmaincontainer .sf-panel-body-top-right .search-box #search-submit {
    display: none;
}
/* ... */

